--- a/css/main-style.css
+++ b/css/main-style.css
@@ -5,6 +5,12 @@ p {
   font-family: arial;
   max-width: 800px;
 }
+li {
+  list-style-type: decimal;
+}
+img {
+  padding: 5px;
+}
 .pf-header {
   border-bottom: 1px solid silver;
   padding-top: 20px;
@@ -66,7 +72,7 @@ p {
   font-family: arial;
   font-weight: bold;
   padding-top: 30px;
-  padding-bottom: 5px;
+  padding-bottom: 0px;
   padding-left: 0px;
   padding-right: 0px;
   margin: 0px;
@@ -82,6 +88,9 @@ p {
 .pr-3 img {
   max-width: 700px;
   padding-bottom: 5px;
+}
+.bridge-1 {
+  width: 800px;
 }
 @media (max-width: 768px) {
 .pf-header {
@@ -114,5 +123,7 @@ p {
   max-width: 450px;
   padding-bottom: 5px;
 }
-
+.bridge-1 {
+  width: 400px;
+}
 }
